# smaug

./: Cargo.toml  README.md  docker-compose.yml
crux-db-node/: CHANGELOG.md  README.md  project.clj
crux-db-node/doc/: intro.md
crux-db-node/src/crux_db_node/: core.clj
crux-db-node/store/event-log/: IDENTITY  LOG  LOG.old.1596814049922648  LOG.old.1596814100161655  LOG.old.1596814154490611  LOG.old.1596814313989879  LOG.old.1596816119733724  OPTIONS-000020
crux-db-node/store/indexes/: 000007.sst  IDENTITY  LOG  LOG.old.1596814049836785  LOG.old.1596814100094114  LOG.old.1596814154369968  LOG.old.1596814313901731  LOG.old.1596816119662305  MANIFEST-000022  OPTIONS-000025
crux-db-node/test/crux_db_node/: core_test.clj
src/: main.rs
