[package]
name = "smaug"
version = "0.1.0"
authors = ["Otavio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix = "0.10.0-alpha.3"
transistor = "1.3.8"
edn-derive = "0.3.7"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
